Puse mayusculas en el header

--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -11,10 +11,10 @@
     <h1>Resto Bar "Nombre del Restaurante"</h1>
     <nav>
       <ul>
-        <li><a href="#entradas">Entradas</a></li>
-        <li><a href="#platos-principales">Platos Principales</a></li>
-        <li><a href="#postres">Postres</a></li>
-        <li><a href="#bebidas">Bebidas</a></li>
+        <li><a href="#Entradas">Entradas</a></li>
+        <li><a href="#Platos-principales">Platos Principales</a></li>
+        <li><a href="#Postres">Postres</a></li>
+        <li><a href="#Bebidas">Bebidas</a></li>
       </ul>
     </nav>
   </header>
