--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -64,5 +64,15 @@
     <!-- Agrega más elementos de menú aquí -->
   </section>
 
+  <div id="footer">
+    <p>Este es el pie de la pagina de prueba</p>
+    <ul>
+      <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+      <li><a href="#"><i class="fa fa-github"></i></a></li>
+    </ul>
+  </div>
+
 </body>
 </html>
