--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -25,7 +25,7 @@
     </nav>
   </header>
 
-  <section id="entradas" class="menu-section">
+  <section id="Entradas" class="menu-section">
     <h2>Entradas</h2>
     <div class="menu-item">
       <h3>Entrada 1</h3>
