prueba enlace ok

--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -1,11 +1,11 @@
-<!--Dejo un comentario randooomm arriba pra ver-->>
+<!--Dejo un comentario randooomm arriba pra ver-->
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <!--cambioIconosFoot-->>
+  <!--cambioIconosFoot-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -25,6 +25,7 @@
     </nav>
   </header>
 
+  <!-- por algun motivo se comporta como case-sensitive en los id, por eso no enlazaba con el menu (los cambio a 1er letra en Mayus)-->
   <section id="Entradas" class="menu-section">
     <h2>Entradas</h2>
     <div class="menu-item">
@@ -36,7 +37,7 @@
     <!-- Agrega más elementos de menú aquí -->
   </section>
 
-  <section id="platos-principales" class="menu-section">
+  <section id="Platos-principales" class="menu-section">
     <h2>Platos Principales</h2>
     <div class="menu-item">
       <h3>Plato Principal 1</h3>
@@ -47,7 +48,7 @@
     <!-- Agrega más elementos de menú aquí -->
   </section>
 
-  <section id="postres" class="menu-section">
+  <section id="Postres" class="menu-section">
     <h2>Postres</h2>
     <div class="menu-item">
       <h3>Postre 1</h3>
@@ -58,7 +59,7 @@
     <!-- Agrega más elementos de menú aquí -->
   </section>
 
-  <section id="bebidas" class="menu-section">
+  <section id="Bebidas" class="menu-section">
     <h2>Bebidas</h2>
     <div class="menu-item">
       <h3>Cuba Libre</h3>
