cambio-estilos-header

--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -12,17 +12,18 @@
 
   <title>Carta de Comida</title>
 </head>
+
 <body>
   <header>
     <h1>Resto Bar "Nombre del Restaurante"</h1>
-    <nav>
-      <ul>
-        <li><a href="#Entradas">Entradas</a></li>
-        <li><a href="#Platos-principales">Platos Principales</a></li>
-        <li><a href="#Postres">Postres</a></li>
-        <li><a href="#Bebidas">Bebidas</a></li>
-      </ul>
-    </nav>
+      <nav>
+        <ul>
+          <li><a href="#Entradas" class="boton">Entradas</a></li>
+          <li><a href="#Platos-principales" class="boton">Platos Principales</a></li>
+          <li><a href="#Postres" class="boton">Postres</a></li>
+          <li><a href="#Bebidas" class="boton">Bebidas</a></li>
+        </ul>
+      </nav>
   </header>
 
   <!-- por algun motivo se comporta como case-sensitive en los id, por eso no enlazaba con el menu (los cambio a 1er letra en Mayus)-->
