--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -15,6 +15,9 @@
 
 <body>
   <header>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,200;9..40,300;9..40,400&display=swap" rel="stylesheet">
     <h1>Resto Bar "Nombre del Restaurante"</h1>
       <nav>
         <ul>
