cambios-foot-prev

--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -18,15 +18,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,200;9..40,300;9..40,400&display=swap" rel="stylesheet">
-    <h1>Resto Bar "Nombre del Restaurante"</h1>
-      <nav>
-        <ul>
-          <li><a href="#Entradas" class="boton">Entradas</a></li>
-          <li><a href="#Platos-principales" class="boton">Platos Principales</a></li>
-          <li><a href="#Postres" class="boton">Postres</a></li>
-          <li><a href="#Bebidas" class="boton">Bebidas</a></li>
-        </ul>
-      </nav>
+      <div id="TituloResto">
+        <h1>Resto Bar "Nombre del Restaurante"</h1>
+      </div>
+          <nav>
+            <ul>
+              <li><a href="#Entradas" class="boton">Entradas</a></li>
+              <li><a href="#Platos-principales" class="boton">Platos Principales</a></li>
+              <li><a href="#Postres" class="boton">Postres</a></li>
+              <li><a href="#Bebidas" class="boton">Bebidas</a></li>
+            </ul>
+          </nav>
   </header>
 
   <!-- por algun motivo se comporta como case-sensitive en los id, por eso no enlazaba con el menu (los cambio a 1er letra en Mayus)-->
@@ -75,7 +77,7 @@
   </section>
 
   <div id="footer">
-    <p>Este es el pie de la pagina de prueba</p>
+    <p>Compartí nuestros deliciosos platos con amigos &#x1F60A;</p>
     <ul>
       <li><a href="#"><i class="fa fa-youtube"></i></a></li>
       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
