--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -76,15 +76,25 @@
     <!-- Agrega más elementos de menú aquí -->
   </section>
 
-  <div id="footer">
-    <p>Compartí nuestros deliciosos platos con amigos &#x1F60A;</p>
+  <section id="footer">
+    <p>Compartí nuestros deliciosos platos con amigos &#x1F60A;&#x2728;</p>
     <ul>
-      <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-      <li><a href="#"><i class="fa fa-github"></i></a></li>
+        <div class="social-buttons">
+          <div class="button">
+            <a href="#"><i class="fa fa-youtube"></i></a>
+          </div>
+          <div class="button">
+            <a href="#"><i class="fa fa-facebook"></i></a>
+          </div>
+          <div class="button">
+            <a href="#"><i class="fa fa-twitter"></i></a>
+          </div>
+          <div class="button">
+            <a href="#"><i class="fa fa-github"></i></a>
+          </div>
+        </div>
     </ul>
-  </div>
+  </section>
 
 </body>
 </html>
