--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -51,10 +51,10 @@
       <section id="Entradas" class="menu-section">
         <h2>Entradas</h2>
         <div class="menu-item">
-          <h3>Entrada 1</h3>
-          <p>Descripción de la entrada 1.</p>
+          <h3><i>Brusquettes</i> caribeñas de tomate fresco</h3>
+          <p>Tostón de masa madre, pincelado con provenzal y aceite de coco, cubierto con tomates de huerta cubeteados y condimentados con chutney de mango.</p>
           <img src="https://www.clarin.com/img/2022/12/22/bruschetta-de-tomate-albahaca-y___UwCUEP0SQ_2000x1500__1.jpg" alt="Nature" class="responsive">
-          <span class="price">$0.00</span>
+          <span class="price">$1150.00</span>
         </div>
         <!-- Agrega más elementos de menú aquí -->
       </section>
