--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -79,6 +79,10 @@
           <span class="price">$1600.00</span>
         </div>
         <!-- Agrega más elementos de menú aquí -->
+        <h3><i>Crème brûlée</i> de crema americana, decorado con grosellas</h3>
+          <p> </p>
+          <img src="https://images.pexels.com/photos/9009957/pexels-photo-9009957.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+          <span class="price">$1700.00</span>
       </section>
 
       <section id="Bebidas" class="menu-section">
