--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -79,9 +79,9 @@
           <span class="price">$1600.00</span>
         </div>
         <!-- Agrega más elementos de menú aquí -->
-        <h3><i>Crème brûlée</i> de crema americana, decorado con grosellas</h3>
-          <p> </p>
-          <img src="https://images.pexels.com/photos/9009957/pexels-photo-9009957.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+        <h3><i>Crème brûlée</i> de crema americana</h3>
+          <p>Un postre francés inigualable, adaptado a los sabores americanos, con una decoración fresca de grosellas</p>
+          <img src="https://images.pexels.com/photos/9009957/pexels-photo-9009957.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Nature" class="responsive">
           <span class="price">$1700.00</span>
       </section>
 
