--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -156,12 +156,14 @@
 
   <section id="footer">
     <p>Compartí nuestros deliciosos platos con amigos &#x1F60A;&#x2728;</p>
-    <ul class="social-buttons">
-      <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-      <li><a href="#"><i class="fa fa-github"></i></a></li>
-    </ul>
+    <nav>
+      <ul class="social-buttons">
+        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fa fa-github"></i></a></li>
+      </ul>
+    </nav>
     <p id="footer-text">Desarrollado por el grupo 6</p>
   </section>
 </body>
