--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -23,7 +23,7 @@
           y, recorriendo el continente latinoamericano, desde el caribe, hasta
           las islas del Atlántico Sur. Será un honor, para nosotros <i> Les Six </i>, complacerlos
           con nuestra mas grata y, deliciosa gastronomía
-          y, coctelaría clásica de esta mezcla de culturas y sensaciones."
+          y, coctelería clásica de esta mezcla de culturas y sensaciones."
         </p>
       </section>
     </div>
