--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -143,7 +143,7 @@
 
     <div class="menu-item">
       <div class="menu-item-content">
-        <h3>Agua de Jamaica holaktal</h3>
+        <h3>Agua de Jamaica</h3>
         <p>Bebida analcohólica a base de té de hibiscus.</p>
       </div>
       <img
