--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -39,6 +39,7 @@
     </nav>
   </header>
 
+  <!--prueba crear bloques-->
   <div id="bloc1">
     <section id="Entradas" class="menu-section">
       <h2>Entradas</h2>
@@ -52,6 +53,7 @@
         <img src="https://www.clarin.com/img/2022/12/22/bruschetta-de-tomate-albahaca-y___UwCUEP0SQ_2000x1500__1.jpg"
           alt="Nature" class="responsive imgBorder">
         <div class="price">$1150.00</div>
+        <!--prueba crear bloques-->
       </div>
 
 
@@ -64,10 +66,11 @@
           alt="Nature" class="responsive imgBorder">
         <div class="price">$2150.00</div>
       </div>
-    </div>
+  </div>
       <!-- Agrega más elementos de menú aquí -->
 
     </section>
+    <!--prueba crear bloques-->
   <div id="bloc2">
     <section id="Platos-principales" class="menu-section">
       <h2>Platos Principales</h2>
@@ -94,7 +97,8 @@
           alt="Nature" class="responsive imgBorder">
         <span class="price">$2950.00</span>
       </div>
-    </div>
+      <!--prueba crear bloques-->
+  </div>
       <!-- Agrega más elementos de menú aquí -->
 
     </section>
