--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -40,7 +40,7 @@
   </header>
 
   <!--prueba crear bloques-->
-  <div id="bloc1">
+  
     <section id="Entradas" class="menu-section">
       <h2>Entradas</h2>
 
@@ -66,38 +66,42 @@
           alt="Nature" class="responsive imgBorder">
         <div class="price">$2150.00</div>
       </div>
-  </div>
+  
       <!-- Agrega más elementos de menú aquí -->
 
     </section>
     <!--prueba crear bloques-->
-  <div id="bloc2">
-    <section id="Platos-principales" class="menu-section">
-      <h2>Platos Principales</h2>
+  <div class="container">
+    <div class="paragraph">
+      <section id="Platos-principales" class="menu-section">
+        <h2>Platos Principales</h2>
 
-      <div class="menu-item">
-        <div class="menu-item-content">
-          <h3>Salmón <i>avec asperges</i></h3>
-          <p>Filet de salmón grillado, acompañado de espárragos salteados con legumbres y mariscos de la región.</p>
+        <div class="menu-item">
+          <div class="menu-item-content">
+            <h3>Salmón <i>avec asperges</i></h3>
+            <p>Filet de salmón grillado, acompañado de espárragos salteados con legumbres y mariscos de la región.</p>
+          </div>
+          <img
+            src="https://hips.hearstapps.com/hmg-prod/images/salmon-con-trigueros-y-judias-1562929760.jpg?crop=1.00xw:0.335xh;0,0.377xh&resize=1200:*"
+            alt="Nature" class="responsive imgBorder">
+          <span class="price">$3800.00</span>
         </div>
-        <img
-          src="https://hips.hearstapps.com/hmg-prod/images/salmon-con-trigueros-y-judias-1562929760.jpg?crop=1.00xw:0.335xh;0,0.377xh&resize=1200:*"
-          alt="Nature" class="responsive imgBorder">
-        <span class="price">$3800.00</span>
-      </div>
+    </div>
 
-      <div class="menu-item">
-        <div class="menu-item-content">
-          <h3><i>Ratatouille</i> con chipotle y base de humita</h3>
-          <p>Plato de vegetales, cocidos a fuego lento con unas ligeras notas de picante y, base dulce de crema de choclo.
-          </p>
+    <div class="paragraph">
+        <div class="menu-item">
+          <div class="menu-item-content">
+            <h3><i>Ratatouille</i> con chipotle y base de humita</h3>
+            <p>Plato de vegetales, cocidos a fuego lento con unas ligeras notas de picante y, base dulce de crema de choclo.
+            </p>
+          </div>
+          <img
+            src="https://kwizin.files.wordpress.com/2013/07/p1018617.jpg"
+            alt="Nature" class="responsive imgBorder">
+          <span class="price">$2950.00</span>
         </div>
-        <img
-          src="https://kwizin.files.wordpress.com/2013/07/p1018617.jpg"
-          alt="Nature" class="responsive imgBorder">
-        <span class="price">$2950.00</span>
-      </div>
-      <!--prueba crear bloques-->
+        <!--prueba crear bloques-->
+    </div>   
   </div>
       <!-- Agrega más elementos de menú aquí -->
 
