--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -120,6 +120,15 @@
       <span class="price">$1700.00</span>
     </div>
 
+    <div class="menu-item">
+      <div class="menu-item-container">
+        <h3><i>Brie</i> con dulce de maracuyá</h3>
+        <p>Bocadillos de un delicioso <i>fromage</i> con mermelada artesanal del exótico fruto amazónico. </p>
+      </div>
+      <img src="https://images.pexels.com/photos/5665636/pexels-photo-5665636.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+        alt="Nature" class="responsive imgBorder">
+      <span class="price">$1700.00</span>
+    </div>
 
 
   </section>
