--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -66,6 +66,17 @@
       <div class="price">$2150.00</div>
     </div>
 
+    <div class="menu-item">
+      <div class="menu-item-container">
+        <h3><i>Croque-monsieur</i> con crema agria de ciboulette</h3>
+        <p>Rodajas de pan de masa madre, tostadas con aceite de oliva extra virgen. Condimentado en su interior con queso crema, cebollín y ciboulette en forma de bocadillos.
+        </p>
+      </div>
+      <img src="https://images.pexels.com/photos/16119654/pexels-photo-16119654/free-photo-of-comida-plato-brindis-desayuno.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Nature" class="responsive imgBorder">
+      <div class="price">$1100.00</div>
+    </div>
+
+
 
 
 
