agregue una entrada mas-ostras

--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -66,7 +66,16 @@
       <div class="price">$2150.00</div>
     </div>
 
-
+    <div class="menu-item">
+      <div class="menu-item-container">
+        <h3>Ostras francesas frescas</h3>
+        <p>Deléitate con nuestra selección de ostras frescas de la costa. Cada bocado es un encuentro con la brisa marina y un sabor inigualable. Presentadas con delicadeza y servidas con limón y salsa mignonette.
+        </p>
+      </div>
+      <img src="https://img.freepik.com/foto-gratis/ostra-fresca-limon-plato_144627-29996.jpg?size=626&ext=jpg"
+        alt="Nature" class="responsive imgBorder">
+      <div class="price">$4200.00</div>
+    </div>
 
 
   </section>
