--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -68,7 +68,7 @@
 
     <div class="menu-item">
       <div class="menu-item-container">
-        <h3>Ostras francesas frescas</h3>
+        <h3>Ostras frescas</h3>
         <p>Deléitate con nuestra selección de ostras frescas de la costa. Cada bocado es un encuentro con la brisa marina y un sabor inigualable. Presentadas con delicadeza y servidas con limón y salsa mignonette.
         </p>
       </div>
