arregle el "Tarta"

--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -57,7 +57,7 @@
 
     <div class="menu-item">
       <div class="menu-item-container">
-        <h3>Tartar de quinoa y frutos de mar</h3>
+        <h3>Tarta de quinoa y frutos de mar</h3>
         <p>Frutos de mar adheresados y, combiandos perfectamente con una selección de aromáticas, palta y quinoa.
         </p>
       </div>
