--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -39,7 +39,7 @@
     </nav>
   </header>
   <div class="subtitulos-menu-item">
-    <h2>► Entradas</h2>
+    <h2>&#128312 Entradas</h2>
   </div>
   <section id="Entradas" class="menu-section">
 
@@ -82,7 +82,7 @@
 
   </section>
   <div class="subtitulos-menu-item">
-    <h2>► Platos Principales</h2>
+    <h2>&#128312 Platos Principales</h2>
   </div>
   <section id="Platos-principales" class="menu-section">
 
@@ -120,7 +120,7 @@
 
   </section>
   <div class="subtitulos-menu-item">
-    <h2>► Postres</h2>
+    <h2>&#128312 Postres</h2>
   </div>
   <section id="Postres" class="menu-section">
 
@@ -159,7 +159,7 @@
 
   </section>
   <div class="subtitulos-menu-item">
-   <h2>► Bebidas</h2>
+   <h2>&#128312 Bebidas</h2>
   </div>
   <section id="Bebidas" class="menu-section">
 
