--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -35,6 +35,7 @@
         <li><a href="#Platos-principales" class="boton">Platos Principales</a></li>
         <li><a href="#Postres" class="boton">Postres</a></li>
         <li><a href="#Bebidas" class="boton">Bebidas</a></li>
+        <li><a href="#Reservas" class="boton">Reservas</a></li>
       </ul>
     </nav>
   </header>
@@ -198,6 +199,29 @@
 
 
   </section>
+
+  <h2>Reservas</h2>
+  <section id="formulario">
+     <form name="miformulario" method="get" action="procesar.php">
+        <br><label for="nombrereserva">Nombre: </label>
+        <input type="text" name="nombrereserva" id="nombrereserva">
+       <p>Horario de reserva:</p>
+        <form>
+          <input type="radio" id="20:00" name="horario_reserva" value="20:00">
+          <label for="20:00">20:00</label><br>   
+          <input type="radio" id="20:30" name="horario_reserva" value="20:30">
+          <label for="20:30">20:30</label><br>
+          <input type="radio" id="21:00" name="horario_reserva" value="21:00">
+          <label for="21:00">21:00</label><br>
+          <input type="radio" id="21:30" name="horario_reserva" value="21:30">
+          <label for="21:30">21:30</label><br>
+        </form>
+        <br><label for="cantidad">Cantidad de comensales: </label>
+        <input type="text" name="cantidad" id="cantidadcomensales">
+        <input type="submit" value="Enviar">
+      </form>
+  </section>
+
 
   <section id="footer">
     <p>Compartí nuestros deliciosos platos con amigos &#x1F60A;&#x2728;</p>
