--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -206,7 +206,7 @@
 <section id="Reservas" class="fondo-form">
     
       <div class="subtitulo-reserva">
-        <h2>Reservas</h2>
+        <h2><u>Reservas</u>:</h2>
       </div>
       <div class= "pos-form">
         <section id="formulario">
