--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <header>
-    <div id="TituloResto">
+    <div id="TituloResto.">
       <h1>Resto Bar "Les Six"</h1>
       <h3><i>Bienvenue chez nous...</i></h3>
       <section id="Subtitle">
