--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -189,7 +189,7 @@
 
     <div class="menu-item">
       <div class="menu-item-container">
-        <h3>Agua mineral</h3>
+        <h3>Agua mineral la prueba real</h3>
         <p>Agua sin gas mineralizada pura del glaciar Ventisquero Negro de Bariloche. La extraccion de la misma se hizo sin daño al ecosistema.</p>
       </div>
       <img src="https://images.pexels.com/photos/8054440/pexels-photo-8054440.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Nature"
