--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -216,14 +216,11 @@
               <input type="text" name="nombrereserva" id="nombrereserva">
             <p>Horario de reserva:</p>
               <form>
-                <input type="radio" id="20:00" name="horario_reserva" value="20:00">
-                <label for="20:00">20:00</label><br>   
-                <input type="radio" id="20:30" name="horario_reserva" value="20:30">
-                <label for="20:30">20:30</label><br>
-                <input type="radio" id="21:00" name="horario_reserva" value="21:00">
-                <label for="21:00">21:00</label><br>
-                <input type="radio" id="21:30" name="horario_reserva" value="21:30">
-                <label for="21:30">21:30</label><br>
+                <select id="horario" name="horaro">
+                  <option value="20:00"> 20.00</option>
+                  <option value="20:30">20:30</option>
+                  <option value="21:00">21:00</option>
+                  <option value="21:30">21:30</option>
               </form>
               <br><label for="cantidad">Cantidad de comensales: </label>
               <input type="text" name="cantidad" id="cantidadcomensales">
