--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -189,7 +189,7 @@
 
     <div class="menu-item">
       <div class="menu-item-container">
-        <h3>Agua mineral con sabores a sandia</h3>
+        <h3>Agua mineral</h3>
         <p>Agua sin gas mineralizada pura del glaciar Ventisquero Negro de Bariloche. La extraccion de la misma se hizo sin daño al ecosistema.</p>
       </div>
       <img src="https://images.pexels.com/photos/8054440/pexels-photo-8054440.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Nature"
@@ -214,13 +214,14 @@
           <form name="miformulario" method="get" action="procesar.php">
               <br><label for="nombrereserva">Nombre: </label>
               <input type="text" name="nombrereserva" id="nombrereserva">
-            <p>Horario de reserva:</p>
-              <form>
-                <select id="horario" name="horaro">
-                  <option value="20:00"> 20.00</option>
+              <form action="/action_page.php">
+                <label for="horario">Horario de reserva:</label>
+                <select id="horario" name="horario">
+                  <option value="20:00">20:00</option>
                   <option value="20:30">20:30</option>
                   <option value="21:00">21:00</option>
                   <option value="21:30">21:30</option>
+                </select>
               </form>
               <br><label for="cantidad">Cantidad de comensales: </label>
               <input type="text" name="cantidad" id="cantidadcomensales">
