--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -212,20 +212,23 @@
         <section id="formulario">
         <div class="recuadro-form">
           <form name="miformulario" method="get" action="procesar.php">
-              <br><label for="nombrereserva">Nombre: </label>
-              <input type="text" name="nombrereserva" id="nombrereserva">
-              <form action="/action_page.php">
-                <label for="horario">Horario de reserva:</label>
-                <select id="horario" name="horario">
-                  <option value="20:00">20:00</option>
-                  <option value="20:30">20:30</option>
-                  <option value="21:00">21:00</option>
-                  <option value="21:30">21:30</option>
-                </select>
-              </form>
-              <br><label for="cantidad">Cantidad de comensales: </label>
-              <input type="text" name="cantidad" id="cantidadcomensales">
-              <input type="submit" value="Enviar">
+            <fieldset>
+                <legend>Complete el formulario: </legend>
+                <br><label for="nombrereserva">Nombre: </label>
+                <input type="text" name="nombrereserva" id="nombrereserva">
+                <form action="/action_page.php">
+                  <label for="horario">Horario de reserva:</label>
+                  <select id="horario" name="horario">
+                    <option value="20:00">20:00</option>
+                    <option value="20:30">20:30</option>
+                    <option value="21:00">21:00</option>
+                    <option value="21:30">21:30</option>
+                  </select>
+                </form>
+                <br><label for="cantidad">Cantidad de comensales: </label>
+                <input type="text" name="cantidad" id="cantidadcomensales">
+                <input type="submit" value="Enviar">
+            </fieldset>
             </form>
           
         </div>
