--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -212,6 +212,8 @@
         <section id="formulario">
         <div class="recuadro-form">
           <form name="miformulario" method="get" action="procesar.php">
+            <fieldset>
+              <legend>Por favor complete el formulario:</legend>
               <br><label for="nombrereserva">Nombre: </label>
               <input type="text" name="nombrereserva" id="nombrereserva">
               <form action="/action_page.php">
@@ -226,7 +228,8 @@
               <br><label for="cantidad">Cantidad de comensales: </label>
               <input type="text" name="cantidad" id="cantidadcomensales">
               <input type="submit" value="Enviar">
-            </form>
+            </fieldset>
+          </form>
           
         </div>
       </div> 
