--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -227,7 +227,7 @@
               </form>
               <br><label for="cantidad">Cantidad de comensales: </label>
               <input type="text" name="cantidad" id="cantidadcomensales">
-              <input type="submit" value="Enviar">
+              <input type="submit" name="btn" value="Enviar">
             </fieldset>
           </form>
           
