--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -215,6 +215,11 @@
               <br><label for="nombrereserva">Nombre: </label>
               <input type="text" name="nombrereserva" id="nombrereserva">
               <form action="/action_page.php">
+                <label for="fecha">Fecha de la reserva:</label>
+                <input type="date" id="fecha" name="fecha">
+              </form>
+              
+              <form action="/action_page.php">
                 <label for="horario">Horario de reserva:</label>
                 <select id="horario" name="horario">
                   <option value="20:00">20:00</option>
