MENU EN EL TOP FIJO

--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <header>
-    <div id="TituloResto.">
+    <div id="TituloResto">
       <h1>Resto Bar "Les Six"</h1>
       <h3><i>Bienvenue chez nous...</i></h3>
       <section id="Subtitle">
@@ -29,16 +29,18 @@
         </p>
       </section>
     </div>
-    <nav>
-      <ul>
-        <li><a href="#Entradas" class="boton">Entradas</a></li>
-        <li><a href="#Platos-principales" class="boton">Platos Principales</a></li>
-        <li><a href="#Postres" class="boton">Postres</a></li>
-        <li><a href="#Bebidas" class="boton">Bebidas</a></li>
-        <li><a href="#Reservas" class="boton">Reservas</a></li>
-      </ul>
-    </nav>
   </header>
+  <div id="NavContainer">
+  <nav>
+    <ul>
+      <li><a href="#Entradas" class="boton">Entradas</a></li>
+      <li><a href="#Platos-principales" class="boton">Platos Principales</a></li>
+      <li><a href="#Postres" class="boton">Postres</a></li>
+      <li><a href="#Bebidas" class="boton">Bebidas</a></li>
+      <li><a href="#Reservas" class="boton">Reservas</a></li>
+    </ul>
+  </nav>
+</div>
   <div class="subtitulos-menu-item">
     <h2>&#128312 Entradas</h2>
   </div>
