--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -235,7 +235,7 @@
                 </select>
               </form>
               <br><label for="cantidad">Cantidad de comensales: </label>
-              <input type="text" name="cantidad" id="cantidadcomensales" min="1" max="15">
+              <input type="number" name="cantidad" id="cantidadcomensales" min="1" max="15">
               <input type="submit" name="btn" value="Enviar">
             </fieldset>
           </form>
