src added to script

--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -251,7 +251,8 @@
 
               </div>
               </section>
-              <script>scriptCartaResto.js</script>
+              <script src="scriptCartaResto.js"></script>
+
           </div>
 </section>
 
@@ -270,7 +271,8 @@
               </nav>
               <p id="footer-text">Desarrollado por el grupo 6</p>
             </section>
-            <script>scriptCarta.js</script>
+            <script src="scriptCartaResto.js"></script>
+
           </body>
 
       </html>
