--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -214,7 +214,7 @@
           <section id="formulario">
               <div class="recuadro-form">
                   <form name="miformulario" method="get">
-                      action="procesar.php"
+                    <form action="procesar.php">
                       <fieldset>
                           <legend>Por favor complete el formulario:</legend>
                           <br><label for="nombrereserva">Nombre: </label>
@@ -246,7 +246,7 @@
 
 
                       </fieldset>
-                  </form>
+                    </form>
                   <button id="botonEnvio" onclick="displayEnvio()">Enviar</button>
                   <p id="demo"></p>
 
