--- a/cartaRestoBar/index.html
+++ b/cartaRestoBar/index.html
@@ -208,7 +208,7 @@
     <section id="Reservas" class="fondo-form">
       <div class="subtitulo-reserva">
           <h2><u>Reservas</u>:</h2>
-      </div>
+      </div><!-- comentario para probar -->
       <div class="pos-form">
           <section id="formulario">
               <div class="recuadro-form">
